[gd_scene load_steps=6 format=3 uid="uid://b1inaktqpkhgr"]

[ext_resource type="Script" uid="uid://bbwuul81dpv70" path="res://scripts/logic/CoverObjectLogic.gd" id="1_e5lm1"]


[sub_resource type="SphereShape3D" id="SphereShape3D_mqq5t"]
radius = 8.0

[sub_resource type="SphereShape3D" id="SphereShape3D_w0cjl"]
radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mqq5t"]
albedo_color = Color(1, 0.04, 0.04, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ot6px"]
material = SubResource("StandardMaterial3D_mqq5t")
size = Vector3(0.3, 8, 0.3)

[node name="coverzone" type="Area3D"]
transform = Transform3D(-0.475486, 0, 0.879723, 0, 1, 0, -0.879723, 0, -0.475486, 0, 0, 0)
collision_layer = 256
collision_mask = 16
script = ExtResource("1_e5lm1")

[node name="collFar" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_mqq5t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_w0cjl")
debug_color = Color(0.8043, 0.84, 0.126, 0.905882)

[node name="CoverPointRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, 0, 5)
collision_mask = 0
collide_with_areas = true
debug_shape_custom_color = Color(0.876068, 0.484087, 0.771385, 1)
debug_shape_thickness = 5

[node name="CoverPointTarget" type="Node3D" parent="CoverPointRay" groups=["cover_target"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CoverPointRay/CoverPointTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.778417, 0)
visible = false
mesh = SubResource("BoxMesh_ot6px")

[node name="CoverTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CoverTimer" to="." method="_on_cover_timer_timeout"]
